[package]
name = "otp_consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = [ "rt-multi-thread", "net", "socket2", "macros", "io-std", "io-util", "sync" ] }
tonic = "0.11.0"
prost = "0.12.3"

[build-dependencies]
tonic-build = "0.11.0"